# bareminal

./: Cargo.toml  README.md
bareminal-cli/: Cargo.toml
bareminal-cli/src/: buffer.rs  bytes.rs  cli_async.rs  cli_sync.rs  cmdline.rs  codes.rs  input.rs  lib.rs  process.rs  tokens.rs  utf.rs
bareminal-macros/: Cargo.toml
bareminal-macros/src/: lib.rs
bareminal-macros/tests/: 01-parse-simple.rs  02-parse-unit.rs  03-parse-group.rs  04-parse-attributes.rs  05-parse-flags.rs  tests.rs
examples/async-no-std/: Cargo.toml  Embed.toml  memory.x
examples/async-no-std/src/: main.rs
examples/async-std/: Cargo.toml
examples/async-std/src/: main.rs
examples/sync-std/: Cargo.toml
examples/sync-std/src/: main.rs
