[workspace]
resolver = "3"
members = ["./bareminal-cli", "./bareminal-macros"]
exclude = [
  "./examples/sync-std",
  "./examples/async-std",
  "./examples/async-no-std/",
]

[workspace.package]
version = "0.3.2"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/bitflak/bareminal.git"
authors = ["Valeri Kremer"]

[workspace.dependencies]
bareminal_cli = { version = "0.3.2", path = "bareminal-cli" }
heapless = "0.9.3"
