[package]
name = "async-std"
version = "0.1.0"
edition = "2024"

[dependencies]
bareminal_cli = { path = "../../bareminal-cli", default-features = false, features = [
  "async-std",
] }
bareminal_macros = { path = "../../bareminal-macros" }
termios = "0.3.3"
anyhow = { version = "1.0", default-features = false }
tokio = { version = "1", features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
rand = "0.10.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
heapless = "0.9.3"
